--- a/ICE2.yml
+++ b/ICE2.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - npm install
+      - npm instlall
   build:
     commands:
       - echo "Build completed"
