--- a/snyk-security-scan.yml
+++ b/snyk-security-scan.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm install -g snyk
 
       - name: Authenticate Snyk
-        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+        run: snyk auth ${{ secrets.4e50181a-7863-446c-860f-ee806e4cab20 }}
 
       - name: Run Snyk Security Scan
         run: snyk test --all-projects
