--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -1,28 +1,27 @@
 name: Snyk Security Scan
- 
+
 on:
   push:
     branches:
       - main
- 
+
 jobs:
-  security:
+  security_scan:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v3
- 
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
- 
-      - name: Install Dependencies
+
+      - name: Install dependencies
         run: npm install
- 
+
       - name: Run Snyk Security Scan
-        uses: snyk/actions/node@master
-        with:
-          args: --severity-threshold=medium
+        uses: snyk/actions/node@v1 
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}  
+        continue-on-error: true
